--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -297,7 +297,7 @@ Then no SV will be 1, but still, the SVs of all strategies can be interpreted as
 Additionally, we will test our adapted paradigm in a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al., \ldots).
 
 \begin{figure}
-\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/Other/Paradigm_Scheme_T2} \caption{Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.}\label{fig:fig1}
+\includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/Other/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.}\label{fig:fig1}
 \end{figure}
 
 \hypertarget{the-present-study}{%
@@ -395,12 +395,13 @@ Study data are being collected and managed using REDCap electronic data capture 
 
 The online survey contains a number of questionnaires: General psychological well-being is assessed using the German version of the WHO-5 scale.\textsuperscript{27,28}
 To capture the construct of resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)\textsuperscript{31} is used.
-Dispositional use of ER is assessed using the German version of the Emotion Regulation Questionnaire (ERQ).\textsuperscript{6,32}
+Habitual use of ER is assessed using the German version of the Emotion Regulation Questionnaire (ERQ).\textsuperscript{6,32}
 For the assessment of ER ability we use the Flexible Emotion Regulation Scale (FlexER).\textsuperscript{33}
 Implicit theories of willpower in emotion control are assessed using the implicit theories questionnaire from.\textsuperscript{34}
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale\textsuperscript{35,36} is used.
-To assess self-control, sum scores of the German versions of the following questionnaires are used:\textsuperscript{37} the Self-Regulation Scale (SRS),\textsuperscript{38} the Brief Self-Control Scale (BSCS);\textsuperscript{39}{]},\textsuperscript{40} and the Barratt Impulsiveness Scale (BIS-11).\textsuperscript{41,42}
+To assess self-control, sum scores of the German versions of the following questionnaires are used:\textsuperscript{37} the Self-Regulation Scale (SRS),\textsuperscript{38} the Brief Self-Control Scale (BSCS),\textsuperscript{39,40} and the Barratt Impulsiveness Scale (BIS-11).\textsuperscript{41,42}
 Attentional control is assessed using the Attentional Control Scale (ACS).\textsuperscript{43}
+For more detailed information on psychometric properties of the questionnaires, please see \protect\hyperlink{SupplementQuestionnaires}{supplementary material}.
 
 \hypertarget{emotion-regulation-paradigm}{%
 \subsubsection{2.3.2 Emotion regulation paradigm}\label{emotion-regulation-paradigm}}
@@ -744,6 +745,18 @@ The paradigm code, as well as the R Markdown file used to analyze the data and w
 \CSLLeftMargin{52. }
 \CSLRightInline{Enders, C. K. \& Tofighi, D. Centering predictor variables in cross-sectional multilevel models: {A} new look at an old issue. \emph{Psychological Methods} \textbf{12}, 121--138 (2007).}
 
+\leavevmode\hypertarget{ref-Preece2020}{}%
+\CSLLeftMargin{53. }
+\CSLRightInline{Preece, D. A., Becerra, R., Robinson, K. \& Gross, J. J. The emotion regulation questionnaire: Psychometric properties in general community samples. \emph{J Pers Assess} \textbf{102}, 348--356 (2020).}
+
+\leavevmode\hypertarget{ref-Fleischhauer2010}{}%
+\CSLLeftMargin{54. }
+\CSLRightInline{Fleischhauer, M. \emph{et al.} Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence. \emph{Personality \& Social Psychology Bulletin} \textbf{36}, 82--96 (2010).}
+
+\leavevmode\hypertarget{ref-Fleischhauer2015}{}%
+\CSLLeftMargin{55. }
+\CSLRightInline{Fleischhauer, M., Strobel, A. \& Strobel, A. Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior. \emph{Journal of Individual Differences} \textbf{36}, 101--109 (2015).}
+
 \end{CSLReferences}
 
 \endgroup
@@ -784,7 +797,7 @@ The authors declare no competing interests.
 \includegraphics[width=0.98\linewidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/99_Thinktank/Other/Paradigm_Scheme_T2} \caption{ }\label{fig:fig1appendix}
 \end{figure}
 
-\emph{Figure 1.} Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.
+\emph{Figure 1.} Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.
 
 \hypertarget{DesignTable}{%
 \section{Design Table}\label{DesignTable}}
@@ -797,6 +810,59 @@ The authors declare no competing interests.
 \section{Supplement}\label{supplement}}
 
 \includepdf[pages={-}, landscape=true]{Supplement/StimList_Suppl.pdf}
+
+\newpage
+
+\hypertarget{SupplementQuestionnaires}{%
+\subsection{Detailed information on psychometric measures}\label{SupplementQuestionnaires}}
+
+\emph{WHO-5.}
+General psychological well-being is assessed using the WHO-5 scale\textsuperscript{27,28}.
+5 Items such as ``Over the past 2 weeks I have felt calm and relaxed.'' are rated on a 6-point Likert scale raning from 0 (at no time) to 5 (all of the time).
+The german version of the scale showed a high internal consistency (Cronbach's \(\alpha=.92\))\textsuperscript{28}.
+
+\emph{Connor-Davidson Resilience Scale.}
+Resilience is assessed using the Connor-Davidson Resilience Scale (CD-RISC)\textsuperscript{29--31}.
+10 items such as ``I am able to adapt to change.'' are rated on a scale from 0 (not true at all) to 4 (true nearly all the time).
+The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{30}.
+
+\emph{Emotion Regulation Questionnaire.}
+Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{6,32}.
+The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\)).\textsuperscript{53}
+
+\emph{FlexER Scale.}
+Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{33} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
+Psychometric properties are currently under investigation.
+
+\emph{Implicit Theories Questionnaire.}
+Implicit theories of willpower in emotional control are assessed using the Implicit Theories Questionnaire of.\textsuperscript{34}
+4 items such as ``Having to control a strong emotion makes you exhausted and you are less able to manage your feelings right afterwards.'' are rated on a 6-point scale ranging from 1 (fully agree) to 6 (do not agree at all).
+The questionnaire showed an internal consistency of Cronbach's \(\alpha=.87\)\textsuperscript{34}.
+
+\emph{Need for Cognition Scale.}
+Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale.\textsuperscript{36}
+Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score.
+The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{36,54} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks.\textsuperscript{55}
+
+\emph{Self-Regulation Scale.}
+As one measure of self-control, the Self-Regulation Scale (SRS)\textsuperscript{38} is used.
+The scale has 10 items (e.g., ``It is difficult for me to suppress thoughts that interfere with what I need to do.'', recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true).
+It has high internal consistency {[}Cronbach's \(\alpha>.80\);{]}.\textsuperscript{38}
+
+\emph{Brief Self-Control Scale.}
+As a second measure of self-control, the Brief Self-Control Scale (BSCS)\textsuperscript{39,40} is used.
+It comprises 13 items (e.g., ``I am good at resisting temptations'') with a 5-point rating scale ranging from 1 (not at all like me) to 5 (very much like me).
+The scale shows acceptable internal consistency (Cronbach's \(\alpha=.81\))\textsuperscript{40} .
+
+\emph{Barratt Impulsiveness Scale.}
+As a third measure of self-control, the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{41,42} is used.
+Responses to each item (e.g., ``I am self-controlled.'', recoded) are assessed on a 4-point scale ranging from 1 (never/rarely) to 4 (almost always/always).
+An internal consistency of Cronbach's \(\alpha=.74\) and a retest reliability of \(r_{tt}=.56\) for General Impulsiveness and \(r_{tt}=.66\) for Total Score across 6 month were reported.\textsuperscript{42}
+
+\emph{Attentional Control Scale.}
+Attentional control is measured using the Attentional Control Scale (ACS)\textsuperscript{43} with items such as ``My concentration is good even if there is music in the room around me''.
+The 20 items are rated on a 4-point scale ranging from 1 (almost never) to 4 (always).
+An internal consistency of Cronbach's \(\alpha=.88\) was reported.\textsuperscript{43}
 
 \newpage
 
