added pilot files

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -120,7 +120,7 @@ library(kableExtra) # for tables in R Markdown
 library(BayesFactor) # for bayes factors
 
 # load workspace variables from analyses_ERED.R script
-load(here("06_Paper","ER-ED","Workspace_ERED.RData"))
+load(here("06_Paper","ER-ED","Workspace_ERED_pilot.RData"))
 
 ```
 
