--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -1084,16 +1084,16 @@ Paired contrasts:
 
 \caption{\label{tab:unnamed-chunk-7}Paired contrasts for the rmANOVA comparing physiological arousal (Corrugator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
-\begin{tabular}{llllllll}
+\begin{tabular}{lllllllll}
 \toprule
-contrast & \multicolumn{1}{c}{estimate} & \multicolumn{1}{c}{SE} & \multicolumn{1}{c}{df} & \multicolumn{1}{c}{t.ratio} & \multicolumn{1}{c}{p.value} & \multicolumn{1}{c}{Eta2 (partial)} & \multicolumn{1}{c}{95% CI}\\
+Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distraction$ & 0.88 & 0.27 & 45.00 & 3.22 & 0.01 & 0.19 & {}[0.05, 1.00]\\
-$View_{negative} - Distancing$ & 0.95 & 0.27 & 45.00 & 3.50 & 0.01 & 0.21 & {}[0.06, 1.00]\\
-$View_{negative} - Suppression$ & 0.92 & 0.27 & 45.00 & 3.40 & 0.01 & 0.20 & {}[0.06, 1.00]\\
-$Distraction - Distancing$ & 0.08 & 0.27 & 45.00 & 0.28 & 1.00 & 1.78e-03 & {}[0.00, 1.00]\\
-$Distraction - Suppression$ & 0.05 & 0.27 & 45.00 & 0.18 & 1.00 & 7.22e-04 & {}[0.00, 1.00]\\
-$Distancing - Suppression$ & -0.03 & 0.27 & 45.00 & -0.10 & 1.00 & 2.36e-04 & {}[0.00, 1.00]\\
+$View_{negative} - Distraction$ & 0.88 & 0.27 & 45.00 & 3.22 & 0.01 & 4,962.89 & 0.19 & {}[0.05, 1.00]\\
+$View_{negative} - Distancing$ & 0.95 & 0.27 & 45.00 & 3.50 & 0.01 & 616.63 & 0.21 & {}[0.06, 1.00]\\
+$View_{negative} - Suppression$ & 0.92 & 0.27 & 45.00 & 3.40 & 0.01 & 11,678.82 & 0.20 & {}[0.06, 1.00]\\
+$Distraction - Distancing$ & 0.08 & 0.27 & 45.00 & 0.28 & 1.00 & 0.07 & 1.78e-03 & {}[0.00, 1.00]\\
+$Distraction - Suppression$ & 0.05 & 0.27 & 45.00 & 0.18 & 1.00 & 0.08 & 7.22e-04 & {}[0.00, 1.00]\\
+$Distancing - Suppression$ & -0.03 & 0.27 & 45.00 & -0.10 & 1.00 & 0.06 & 2.36e-04 & {}[0.00, 1.00]\\
 \bottomrule
 \addlinespace
 \end{tabular}
